Apparently, filtering on entityId is missing
