# containers/entitlements/main.py
@@ -405,6 +405,7 @@ async def read_entitlements(
     auth_token=Depends(get_auth),
     authority: Optional[AuthorityUrl] = None,
     name: Optional[str] = None,
+    entity_id: Optional[str] = None,
     order: Optional[str] = None,
     sort: Optional[str] = Query(
         "",
@@ -418,6 +419,8 @@ async def read_entitlements(
         filter_args["namespace"] = authority
     if name:
         filter_args["name"] = name
+    if entity_id:
+        filter_args["entity_id"] = entity_id
     if order:
         filter_args["values"] = order
 
